--- a/A&M Clothes.html
+++ b/A&M Clothes.html
@@ -125,7 +125,7 @@
       <div class="Money">
      Price: 1999
       </div>
-      <div class="buy"> Buy Now </div>
+      <div class="buy">  <a href="1st cloth.html" target="_blank">Buy Now </a> </div>
       </div>
       </div>
      
@@ -139,7 +139,7 @@
     <div class="Money">
     Price: 1999
     </div>
-    <div class="buy"> Buy Now </div>
+    <div class="buy">Buy Now </div>
       </div>
       </div>
      
